--- a/style.css
+++ b/style.css
@@ -1,7 +1,22 @@
+.main {
+  margin: 25px 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: darkslategray;
+}
 .heading {
   display: block;
-  margin: 0;
+  margin: 0 0 10px;
   font-size: 24px;
-  color: purple;
+  color: rgb(221, 105, 221);
+  text-align: center;
+}
+.desctiption {
+  display: block;
+  max-width: 350px;
+  margin: 0;
+  font-size: 15px;
+  color: white;
   text-align: center;
 }
